feat(core): 评审项支持多级树形表格渲染
- 重写toFlatList()为递归遍历，支持任意层级节点（1→1.1→1.1.1...）
- 补全字段：serialNo/itemContent/maxScore/weight/subjectivity/isRequired
- 评审项列表从reviewData嵌套提升到顶层data，兼容poi-tl {{#list}}标签
- 非叶子节点填充分类维度字段，叶子节点完整填充

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>